// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractInlineFields (a::b::c) (a::f::d) 1`] = `
Array [
  Object {
    "chunks": Array [
      "a",
      "b",
      "c",
    ],
    "raw": "(a::b::c)",
  },
  Object {
    "chunks": Array [
      "a",
      "f",
      "d",
    ],
    "raw": "(a::f::d)",
  },
]
`;

exports[`extractInlineFields (mood:: okay) && (length:: 2 hours) 1`] = `
Array [
  Object {
    "chunks": Array [
      "mood",
      " okay",
    ],
    "raw": "(mood:: okay)",
  },
  Object {
    "chunks": Array [
      "length",
      " 2 hours",
    ],
    "raw": "(length:: 2 hours)",
  },
]
`;

exports[`extractInlineFields (subject :: mood:: okay) && (subject :: length:: 2 hours) 1`] = `
Array [
  Object {
    "chunks": Array [
      "subject ",
      " mood",
      " okay",
    ],
    "raw": "(subject :: mood:: okay)",
  },
  Object {
    "chunks": Array [
      "subject ",
      " length",
      " 2 hours",
    ],
    "raw": "(subject :: length:: 2 hours)",
  },
]
`;

exports[`extractInlineFields **Rating**:: 6 1`] = `
Array [
  Object {
    "chunks": Array [
      "**Rating**",
      " 6",
    ],
    "raw": "**Rating**:: 6",
  },
]
`;

exports[`extractInlineFields **Thoughts**:: It was decent. 1`] = `
Array [
  Object {
    "chunks": Array [
      "**Thoughts**",
      " It was decent.",
    ],
    "raw": "**Thoughts**:: It was decent.",
  },
]
`;

exports[`extractInlineFields [[Alice]] :: foaf:knows :: [[Bob]] 1`] = `
Array [
  Object {
    "chunks": Array [
      "[[Alice]] ",
      " foaf:knows ",
      " [[Bob]]",
    ],
    "raw": "[[Alice]] :: foaf:knows :: [[Bob]]",
  },
]
`;

exports[`extractInlineFields No inline fields 1`] = `Array []`;

exports[`extractInlineFields Too :: many :: inline :: fields  1`] = `
Array [
  Object {
    "chunks": Array [
      "Too ",
      " many ",
      " inline ",
      " fields ",
    ],
    "raw": "Too :: many :: inline :: fields ",
  },
]
`;

exports[`extractInlineFields a::b
between
c::d 1`] = `
Array [
  Object {
    "chunks": Array [
      "a",
      "b",
    ],
    "raw": "a::b",
  },
]
`;

exports[`extractInlineFields a::b
c::d
after 1`] = `
Array [
  Object {
    "chunks": Array [
      "a",
      "b",
    ],
    "raw": "a::b",
  },
]
`;

exports[`extractInlineFields a::b::c
a::f::d 1`] = `
Array [
  Object {
    "chunks": Array [
      "a",
      "b",
      "c",
    ],
    "raw": "a::b::c",
  },
]
`;

exports[`extractInlineFields before
a::b
a::f 1`] = `
Array [
  Object {
    "chunks": Array [
      "a",
      "b",
    ],
    "raw": "a::b",
  },
]
`;

exports[`extractInlineFields http://example.org :: is a :: website 1`] = `
Array [
  Object {
    "chunks": Array [
      "http://example.org ",
      " is a ",
      " website",
    ],
    "raw": "http://example.org :: is a :: website",
  },
]
`;

exports[`extractInlineFields inline :: field 1`] = `
Array [
  Object {
    "chunks": Array [
      "inline ",
      " field",
    ],
    "raw": "inline :: field",
  },
]
`;

exports[`extractInlineFields lives in :: [Test with relative](../houses/BobHouse.md) 1`] = `
Array [
  Object {
    "chunks": Array [
      "lives in ",
      " [Test with relative](../houses/BobHouse.md)",
    ],
    "raw": "lives in :: [Test with relative](../houses/BobHouse.md)",
  },
]
`;

exports[`extractInlineFields nested ( inline :: field ) 1`] = `
Array [
  Object {
    "chunks": Array [
      " inline ",
      " field ",
    ],
    "raw": "( inline :: field )",
  },
]
`;

exports[`extractInlineFields nested ( subject :: inline :: field ) 1`] = `
Array [
  Object {
    "chunks": Array [
      " subject ",
      " inline ",
      " field ",
    ],
    "raw": "( subject :: inline :: field )",
  },
]
`;

exports[`extractInlineFields subject :: **Rating**:: 6 1`] = `
Array [
  Object {
    "chunks": Array [
      "subject ",
      " **Rating**",
      " 6",
    ],
    "raw": "subject :: **Rating**:: 6",
  },
]
`;

exports[`extractInlineFields subject :: **Thoughts**:: It was decent. 1`] = `
Array [
  Object {
    "chunks": Array [
      "subject ",
      " **Thoughts**",
      " It was decent.",
    ],
    "raw": "subject :: **Thoughts**:: It was decent.",
  },
]
`;

exports[`extractInlineFields subject :: inline :: field 1`] = `
Array [
  Object {
    "chunks": Array [
      "subject ",
      " inline ",
      " field",
    ],
    "raw": "subject :: inline :: field",
  },
]
`;

exports[`removeInlineFields (a::b::c) (a::f::d) 1`] = `" "`;

exports[`removeInlineFields (mood:: okay) && (length:: 2 hours) 1`] = `" && "`;

exports[`removeInlineFields (subject :: mood:: okay) && (subject :: length:: 2 hours) 1`] = `" && "`;

exports[`removeInlineFields **Rating**:: 6 1`] = `""`;

exports[`removeInlineFields **Thoughts**:: It was decent. 1`] = `""`;

exports[`removeInlineFields [[Alice]] :: foaf:knows :: [[Bob]] 1`] = `""`;

exports[`removeInlineFields No inline fields 1`] = `"No inline fields"`;

exports[`removeInlineFields Too :: many :: inline :: fields  1`] = `""`;

exports[`removeInlineFields a::b
between
c::d 1`] = `
"
between
c::d"
`;

exports[`removeInlineFields a::b
c::d
after 1`] = `
"
c::d
after"
`;

exports[`removeInlineFields a::b::c
a::f::d 1`] = `
"
a::f::d"
`;

exports[`removeInlineFields before
a::b
a::f 1`] = `
"before

a::f"
`;

exports[`removeInlineFields http://example.org :: is a :: website 1`] = `""`;

exports[`removeInlineFields inline :: field 1`] = `""`;

exports[`removeInlineFields lives in :: [Test with relative](../houses/BobHouse.md) 1`] = `""`;

exports[`removeInlineFields nested ( inline :: field ) 1`] = `"nested "`;

exports[`removeInlineFields nested ( subject :: inline :: field ) 1`] = `"nested "`;

exports[`removeInlineFields subject :: **Rating**:: 6 1`] = `""`;

exports[`removeInlineFields subject :: **Thoughts**:: It was decent. 1`] = `""`;

exports[`removeInlineFields subject :: inline :: field 1`] = `""`;
